--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   database:
     image: postgres:${POSTGRES_VERSION:-15}-alpine
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-my_db}
+      POSTGRES_DB: ${POSTGRES_DB:-postgres}
       # You should definitely change the password in production
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-MySuperPassword}
       POSTGRES_USER: ${POSTGRES_USER:-my_user}
@@ -13,9 +13,9 @@ services:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
-###< doctrine/doctrine-bundle ###
-      ports:
-        -'5432:5432'
+      ###< doctrine/doctrine-bundle ###
+    ports:
+      - 5432:5432
 
   php:
     container_name: php
