problems with easy admin

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+easy_admin_bundle:
+    resource: 'src/Controller/Admin'
+    type: annotation
+    prefix: /admin
